2nd commit of the day

--- a/01_intro.html
+++ b/01_intro.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev</title>
 </head>
+
 <body>
     <h1>Hello Web Dev!</h1>
     <h2>Lorem ipsum dolor sit amet.</h2>
     <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, ullam.</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque sapiente sit illo hic quas ad. Harum nesciunt inventore voluptatum laboriosam soluta consequatur eveniet recusandae, ratione corporis, voluptas optio sapiente delectus voluptatibus, officia quia eum.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque sapiente sit illo hic quas ad. Harum nesciunt
+        inventore voluptatum laboriosam soluta consequatur eveniet recusandae, ratione corporis, voluptas optio sapiente
+        delectus voluptatibus, officia quia eum.</p>
 
     <!-- div>ul>li*3  -->
     <div>
@@ -39,6 +43,7 @@
 
     <form action="" method="get"></form>
     <audio src=""></audio>
-    
+
 </body>
+
 </html>
