--- a/CSS/CSS Project/index.html
+++ b/CSS/CSS Project/index.html
@@ -11,10 +11,12 @@
 <body>
     <div class="card">
         <form action="">
-            <h1>Sign Up</h1>
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
-            <button type="submit">Login</button>
+            <h1>Login</h1>
+            <input id="email" type="email" placeholder="Email">
+            <input id="name" type="text" placeholder="First name">
+            <input id="surname" type="text" placeholder="Last name">
+            <input id="password" type="password" placeholder="Password">
+            <button type="submit">Sign Up</button>
         </form>
     </div>
 </body>
