--- a/CSS/03_selectors/selectors.html
+++ b/CSS/03_selectors/selectors.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Selectors</title>
     <style>
-        
+
         /* 1. Universal Selector */
         * {
             margin: 0;
@@ -91,6 +91,8 @@
     </style>
 </head>
 <body>
-    
+    <div>
+        heelo
+    </div>
 </body>
 </html>
