2nd commit of the day

--- a/CSS/04_navbar_project/index.html
+++ b/CSS/04_navbar_project/index.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Navbar with pseudo element</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="navbar-container">
         <h2>Variation 1: Horizontal with underline effect</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
-            <li><button class="login-btn">Login</button></li>
-        </ul>
+        <div class="nav-1">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><button class="login-btn">Login</button></li>
+            </ul>
+        </div>
     </div>
     <div class="navbar-container">
         <h2>Variation 2: Vertical with hover effect</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Products</a></li>
-        </ul>
-        <button class="login-btn">Login</button>
+        <div class="nav-2">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+            </ul>
+            <button class="login-btn">Login</button>
+        </div>
     </div>
     <div class="navbar-container">
         <h2>Variation 3: Horizontal with dropdown effect</h2>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <a href="#">Our Story</a>
-            <a href="#">Team</a>
-            <a href="#">Contact</a>
-            <li><a href="#">Products</a></li>
-            <li><button class="login-btn">Login</button></li>
-        </ul>
+        <div class="nav-3">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li class="dropdown">
+                    <a href="#">About</a>
+                    <div class="dropdown-menu">
+                        <a href="#">Our Story</a>
+                        <a href="#">Team</a>
+                        <a href="#">Contact</a>
+                    </div>
+                </li>
+                <li><a href="#">Products</a></li>
+                <li><button class="login-btn">Login</button></li>
+            </ul>
+        </div>
     </div>
 </body>
+
 </html>
