--- a/JS/part3/index.html
+++ b/JS/part3/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            height: 80vh;
+        }
+    </style>
 </head>
 <body>
     <button style="cursor: pointer;" class="btn" >Click Me</button>
 
+    <h1>Hello...</h1>
+
+    <img class="img1" src="https://images.unsplash.com/photo-1736953072378-b9f25f2635d0?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyMnx8fGVufDB8fHx8fA%3D%3D" height="50%">
+
+    <img class="img2" src="https://images.unsplash.com/photo-1735597821463-05f8cbd08fca?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyNnx8fGVufDB8fHx8fA%3D%3D"
+    height="50%">
+
+    <button class="swap" style="cursor: pointer;">Swap Image</button>
+
+    
+    <form action="">
+        <input type="text" name="name" id="name" placeholder="Name">
+        
+        <input type="submit" id="submit" style="cursor: pointer;">
+    </form>
 
     <script src="hello.js"></script>
 </body>
