--- a/JS/part3/index.html
+++ b/JS/part3/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
     <style>
         body {
-            height: 80vh;
+            height: 1200px;
         }
     </style>
 </head>
 <body>
-    <button style="cursor: pointer;" class="btn" >Click Me</button>
+    <!-- <button style="cursor: pointer;" class="btn" >Click Me</button>
 
     <h1>Hello...</h1>
 
@@ -29,6 +29,36 @@
         <input type="submit" id="submit" style="cursor: pointer;">
     </form>
 
+    <h2>List Items</h2>
+    <ul>
+
+        <button style="cursor: pointer;"  id="add">Add</button>
+        <button style="cursor: pointer;"  id="remove">Remove</button>
+    </ul>
+
+    <h3>Timer</h3>
+    <p id="timer"></p> -->
+
+    <!-- <div class="tabs">
+        <div class="home">
+
+        </div>
+        <button style="cursor: pointer; padding: 10px; font-weight: bold;"  class="homeBtn" >Home</button>
+        <button style="cursor: pointer; padding: 10px; font-weight: bold;" class="aboutBtn">About</button>
+
+        <h1 id="home" style="display: none;">Home</h1>
+        <div style="padding: 50px; " class="home">
+            <p style="width: 70%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quas vero animi et corporis exercitationem, laudantium earum veritatis non ipsum. Repellat ea ad aut quas labore eum ipsa doloribus ratione? Voluptas dolor delectus cum quam, magni eveniet qui pariatur doloremque esse! Veritatis, quo quia nam voluptas enim debitis, quis laborum officiis explicabo et sint eveniet, voluptates unde! Distinctio quis atque dolorum nostrum, nihil enim explicabo, perferendis ipsa cum delectus consequuntur, provident rerum aspernatur vero cumque ut magni quisquam? Quam dolorum exercitationem perferendis reiciendis at ut tempore libero quibusdam magni placeat iusto alias nihil iste, accusantium magnam aut! Quos tempora optio ratione. Error illum praesentium corporis illo debitis excepturi nobis ea alias quaerat, eveniet voluptates quis? Eligendi incidunt iure ullam necessitatibus sunt similique tempora at laborum molestiae iusto? Iure, praesentium non! Accusantium, odit magni.</p>
+        </div>
+
+        <section style="padding: 50px; display: none;" class="about">
+            <h1>About</h1>
+            <p style="width: 70%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum consectetur quas vero animi et corporis exercitationem, laudantium earum veritatis non ipsum. Repellat ea ad aut quas labore eum ipsa doloribus ratione? Voluptas dolor delectus cum quam, magni eveniet qui pariatur doloremque esse! Veritatis, quo quia nam voluptas enim debitis, quis laborum officiis explicabo et sint eveniet, voluptates unde! Distinctio quis atque dolorum nostrum, nihil enim explicabo, perferendis ipsa cum delectus consequuntur, provident rerum aspernatur vero cumque ut magni quisquam? Quam dolorum exercitationem perferendis reiciendis at ut tempore libero quibusdam magni placeat iusto alias nihil iste, accusantium magnam aut!</p>
+        </section>
+        
+    </div> -->
+
+    
     <script src="hello.js"></script>
 </body>
 </html>
