--- a/JS/part6/index.html
+++ b/JS/part6/index.html
@@ -8,8 +8,8 @@
 <body>
     
 
-    <script src="constructorFunction.js"></script>
-    <script src="prototypes.js"></script>
+    <!-- <script src="constructorFunction.js"></script> -->
+    <!-- <script src="prototypes.js"></script> -->
     <script src="sample.js"></script>
 </body>
 </html>
