--- a/JS/part7/dom.html
+++ b/JS/part7/dom.html
@@ -14,6 +14,16 @@
             text-align: center;
             padding: 20px;
         }
+        ul {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        ol {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     </style>
 </head>
 <body>
@@ -22,13 +32,39 @@
      <button class="paraChange">Click here</button>
 
 
-    <!-- Click on button color the 1st child of ul element -->
+    <!-- Click on button to color the 1st child of ul element -->
+    <div class="div2">
+        <h3>Chocolates:</h3>
+        <ul> 
+            <li>Velvet Truffle</li>
+            <li>Midnight Cocoa Bliss</li>
+            <li>Golden Caramel Swirl</li>
+            <li>Hazelnut Dream</li>
+        </ul>
+        <button class="btnChocolate">Highlight the chocolate</button>
+    </div>
+
     <!-- Click on button to change the coffee order -->
+
+    <div class="div3">
+        <h2>Types of coffee:</h2>
+        <ol>
+            <li>Espresso</li>
+            <li>Cappuccino</li>
+            <li>Latte</li>
+        </ol>
+        <button class="btnCoffee">Change the coffee</button>
+    </div>
+
     <!-- Click on button to create an element and add that element in shopping list -->
+
+    
     <!-- Click on button to remove the tasks one by one from the list of tasks -->
     <!-- Click on a button to get alert -->
     <!-- Click on a button to target the element and display the targeted element context in the alert-->
-     <!--   -->
+    <!-- Make a form and on submission display the input msg in para. -->
+    <!-- Target a para and display the text on DOMContentLoaded event.-->
+    <!-- Click on a button to toggle/add the color of the text using CSS classList. -->
 
     <script src="script.js"></script>
 </body>
