--- a/Backend/Server/index.html
+++ b/Backend/Server/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to a custom server</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Welcome to custom server</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #1a1a1a;
-            color: #f5f5f5;
-        }
+      body {
+        background-color: #1a1a1a;
+        color: #fff;
+      }
     </style>
-</head>
-<body>
-    <h1 style="text-align: center;">Hello - Home Page</h1>
-</body>
+  </head>
+  <body>
+    <h1 style="text-align: center">Welcome to chaicode</h1>
+  </body>
 </html>
